--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 <form action=load.php method=get>
-  Title: <input type="text" name="Title" size=60><BR>
-  Google Docs Spreadsheet Key: <input type="text" name="KEY" size=60><BR>
+  Title for Report Page: <input type="text" name="Title" size=60><BR>
+  Google Docs Spreadsheet Key or Sharing URL: <input type="text" name="KEY" size=60><BR>
   <input type="submit" name="Submit">
 
 </form>
